Add reaction capability to chat messages