@@ -14,15 +14,12 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Base64.Decoder;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,11 +32,10 @@ public class EmoticonService implements InitializingBean {
   private final ObjectMapper objectMapper;
 
   private List<EmoticonsGroup> emoticonsGroups;
-  private Pattern emoticonShortcodeDetectorPattern;
 
   private final Decoder decoder = Base64.getDecoder();
-  private final Map<String, String> shortcodeToBase64SvgContent = new HashMap<>();
   private final Map<String, Image> shortcodeToImage = new HashMap<>();
+  private final Map<String, Emoticon> shortcodeToEmoticon = new HashMap<>();
 
   @Override
   public void afterPropertiesSet() {
@@ -49,22 +45,16 @@ public class EmoticonService implements InitializingBean {
   @VisibleForTesting
   void loadAndVerifyEmoticons() {
     try (InputStream emoticonsInputStream = EMOTICONS_JSON_FILE_RESOURCE.getInputStream()) {
-      emoticonsGroups = Arrays.asList(objectMapper.readValue(emoticonsInputStream, EmoticonsGroup[].class));
+      emoticonsGroups = List.of(objectMapper.readValue(emoticonsInputStream, EmoticonsGroup[].class));
       emoticonsGroups.stream().flatMap(emoticonsGroup -> emoticonsGroup.emoticons().stream()).forEach(emoticon -> {
         String base64SvgContent = emoticon.base64SvgContent();
         Image image = new Image(IOUtils.toInputStream(new String(decoder.decode(base64SvgContent))));
         emoticon.shortcodes().forEach(shortcode -> {
-          if (shortcodeToBase64SvgContent.containsKey(shortcode)) {
+          if (shortcodeToImage.put(shortcode, image) != null || shortcodeToEmoticon.put(shortcode, emoticon) != null) {
             throw new ProgrammingError("Shortcode `" + shortcode + "` is already taken");
           }
-          shortcodeToBase64SvgContent.put(shortcode, base64SvgContent);
-          shortcodeToImage.put(shortcode, image);
         });
       });
-      emoticonShortcodeDetectorPattern = Pattern.compile(shortcodeToBase64SvgContent.keySet()
-          .stream()
-          .map(Pattern::quote)
-          .collect(Collectors.joining("|")));
     } catch (IOException e) {
       throw new AssetLoadException("Unable to load emoticons", e, "");
     }
@@ -74,15 +64,16 @@ public class EmoticonService implements InitializingBean {
     return emoticonsGroups;
   }
 
-  public Pattern getEmoticonShortcodeDetectorPattern() {
-    return emoticonShortcodeDetectorPattern;
-  }
-
-  public String getBase64SvgContentByShortcode(String shortcode) {
-    return shortcodeToBase64SvgContent.get(shortcode);
+  public boolean isEmoticonShortcode(String shortcode) {
+    return shortcodeToEmoticon.containsKey(shortcode);
   }
 
   public Image getImageByShortcode(String shortcode) {
     return shortcodeToImage.get(shortcode);
   }
+
+  public Emoticon getEmoticonByShortcode(String shortcode) {
+    return shortcodeToEmoticon.get(shortcode);
+  }
+
 }
